
Release 2.0.0-ALPHA - 01/13/2021

   BREAKING CHANGES in 2.0.0
   * General
     * OCR is now triggered automatically for PDFs if tesseract
       is on the user's path see (https://cwiki.apache.org/confluence/display/TIKA/TikaOCR#TikaOCR-disable-ocr)
       for how to disable OCR.
     * By default, when rendering a page for OCR, the PDFParser does not render glyphs/text.
     * Removed deprecated Metadata keys/properties (TIKA-1974).
     * Removed dangerous calls to read an inputstream or convert to bytes
       without specifying a charset
     * Parsers can be configured via tika-config.xml on instantiation.
       We have moved away from configuration via .properties files because
       of confusion among users.  This affects the PDFParser, TesseractOCRParser
       and the StringsParser.
     * In tika-server, for those parsers that can be configured per parse via a config object
       passed in through the ParseContext, the config object will only update those fields
       that the user has modified.  The config object will no longer
       fully reset all settings to the default settings per parse.
       This has a more intuitive "update the base/configured settings" with
       what has been changed in the config object.
     * We are now using non-shaded versions of xmpcore with namespaces com.adobe.internal.*
       vs com.adobe.*.

   * tika-parsers
     * The parser modules have been broken into three main modules:
        tika-parsers-standard, tika-parsers-extended and tika-parsers-ml.
        Users may now need to add tika-parsers-extended to tika-app and
        tika-server to include parsers that used to be included by default
        (for example: envi, gdal, grib, isatab, netcdf).
     * ChmParser was moved to org.apache.tika.parser.microsoft.chm
     * RTFParser was moved to org.apache.tika.parser.microsoft.rtf

   * tika-app

   * tika-server
     * tika-server now by default forks a process to isolate the parsing